--- a/index.ipynb
+++ b/index.ipynb
@@ -154,7 +154,8 @@
    "outputs": [],
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
-    "    for restaurant in restaurants"
+    "    for restaurant in restaurants:\n",
+    "        if "
    ]
   },
   {
