Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -156,7 +156,8 @@
     "def better_restaurant(restaurant, alternative):\n",
     "    for restaurant in restaurants:\n",
     "        if restaurant['rating']>alternative['rating']:\n",
-    "            "
+    "            return restaurant\n",
+    "        return"
    ]
   },
   {
